<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.UserDetailActivity">

    <Button
        android:id="@+id/back_button"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_baseline_arrow_back_ios_24"
        android:contentDescription="back button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ToggleButton
        android:id="@+id/toggle_favorite"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/favorite_toggle"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textOff=""
        android:textOn=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_avatar_detail"
        android:layout_width="100dp"
        android:layout_height="100dp"

        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:contentDescription="detail user image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_button" />

    <TextView
        android:id="@+id/tv_name_detail"
        style="@style/TextContent.MainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/detail_name"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar_detail"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar_detail" />

    <TextView
        android:id="@+id/tv_company_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_outline_office_24"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:text="@string/detail_company"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_name_detail" />

    <TextView
        android:id="@+id/tv_location_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:drawableStart="@drawable/ic_outline_location_on_24"
        android:fontFamily="@font/poppins_regular"
        android:gravity="center_vertical"
        android:text="@string/detail_location"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar_detail"
        app:layout_constraintTop_toBottomOf="@+id/tv_company_detail" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar_detail">

        <TextView
            android:id="@+id/tv_followers_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="5 followers" />

        <TextView
            android:id="@+id/tv_following_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_baseline_person_outline_24"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center_vertical"
            android:text="5 following" />
    </LinearLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="tab"
        android:background="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:tabTextColor="@android:color/black" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="400dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tabs" />


</androidx.constraintlayout.widget.ConstraintLayout>